--- a/stureports/think-java/Crevin921.think-java_results.html
+++ b/stureports/think-java/Crevin921.think-java_results.html
@@ -59,8 +59,8 @@ Seconds to minutes to hours
 Im thinking of a number between 1 and 100
 	Can you guess what it is? 
 	your guess was: 13
-	The number i was thinking of was: 16
-	you were off by -3
+	The number i was thinking of was: 39
+	you were off by -26
 	
 <--
 	[OUTPUT OK]
@@ -98,15 +98,18 @@ Im thinking of a number between 1 and 100
 	[SUCCESSFUL COMPILE] Ch6Ex4.java
 [RUNNING] Ch6Ex4
 -->
-Test: Results for Exercise4.isAbecedarian()
-	  [PASSED] Exercise4.isAbecedarian("abcdef") 
-	  [PASSED] Exercise4.isAbecedarian("aaaaaa") 
-	  [PASSED] Exercise4.isAbecedarian("gfedcba") 
-	  [PASSED] Exercise4.isAbecedarian("z") 
-	  [PASSED] Exercise4.isAbecedarian("beknow") 
-	  [PASSED] Exercise4.isAbecedarian("no") 
-	  [PASSED] Exercise4.isAbecedarian("he") 
-	  TEST FINISHED, PASSED: 7/7.
+
+	<br>Results for Exercise4.isAbecedarian()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise4.isAbecedarian("abcdef")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("aaaaaa")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("gfedcba")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("z")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("beknow")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("no")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("he")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	</table><br>
+	[deductions=0.0]
+	
 	
 <--
 	[OUTPUT OK]
@@ -138,62 +141,39 @@ Test: Results for Exercise4.isAbecedarian()
 	[SUCCESSFUL COMPILE] SwetterciseTest.java
 [RUNNING] SwetterciseTest
 -->
-Test: Results for reverseStr()
-	  [   :( ] reverseStr("I haz win?"): 
-			EXPECTED: ?niw zah I
-			RECEIVED: raised exception
-	  [   :( ] reverseStr("007 bond james"): 
-			EXPECTED: semaj dnob 700
-			RECEIVED: raised exception
-	  [   :( ] reverseStr("banannas"): 
-			EXPECTED: sannanab
-			RECEIVED: raised exception
-	  [   :( ] reverseStr("tacocat"): 
-			EXPECTED: tacocat
-			RECEIVED: raised exception
-	  TEST FINISHED, PASSED: 0/4.
-	Test: Results for collatzThis()
-	  [   :( ] collatzThis("12"): 
-			EXPECTED: 12, 6, 3, 10, 5, 16, 8, 4, 2, 1
-			RECEIVED: Raised Exception
-	  [   :( ] collatzThis("4"): 
-			EXPECTED: 4, 2, 1
-			RECEIVED: Raised Exception
-	  [   :( ] collatzThis("11"): 
-			EXPECTED: 11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1
-			RECEIVED: Raised Exception
-	  TEST FINISHED, PASSED: 0/7.
-	Test: Results for isPrime()
-	  [   :( ] isPrime("12"): 
-			EXPECTED: false
-			RECEIVED: raised Exception
-	  [   :( ] isPrime("4"): 
-			EXPECTED: false
-			RECEIVED: raised Exception
-	  [   :( ] isPrime("7"): 
-			EXPECTED: true
-			RECEIVED: raised Exception
-	  [   :( ] isPrime("13"): 
-			EXPECTED: true
-			RECEIVED: raised Exception
-	  [   :( ] isPrime("15"): 
-			EXPECTED: false
-			RECEIVED: raised Exception
-	  [   :( ] isPrime("2048"): 
-			EXPECTED: false
-			RECEIVED: raised Exception
-	  [   :( ] isPrime("1031"): 
-			EXPECTED: true
-			RECEIVED: raised Exception
-	  TEST FINISHED, PASSED: 0/14.
+
+	<br>Results for reverseStr()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">reverseStr("I haz win?")  </td><td align="left">raised exception</td><td bgcolor="red"><b>?niw zah I </b></td></tr>
+	<tr><td align="right" width="200">reverseStr("007 bond james")  </td><td align="left">raised exception</td><td bgcolor="red"><b>semaj dnob 700 </b></td></tr>
+	<tr><td align="right" width="200">reverseStr("banannas")  </td><td align="left">raised exception</td><td bgcolor="red"><b>sannanab </b></td></tr>
+	<tr><td align="right" width="200">reverseStr("tacocat")  </td><td align="left">raised exception</td><td bgcolor="red"><b>tacocat </b></td></tr>
+	</table><br>
+	
+	<br>Results for collatzThis()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">collatzThis("12")  </td><td align="left">Raised Exception</td><td bgcolor="red"><b>12, 6, 3, 10, 5, 16, 8, 4, 2, 1 </b></td></tr>
+	<tr><td align="right" width="200">collatzThis("4")  </td><td align="left">Raised Exception</td><td bgcolor="red"><b>4, 2, 1 </b></td></tr>
+	<tr><td align="right" width="200">collatzThis("11")  </td><td align="left">Raised Exception</td><td bgcolor="red"><b>11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1 </b></td></tr>
+	</table><br>
+	
+	<br>Results for isPrime()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">isPrime("12")  </td><td align="left">raised Exception</td><td bgcolor="red"><b>false </b></td></tr>
+	<tr><td align="right" width="200">isPrime("4")  </td><td align="left">raised Exception</td><td bgcolor="red"><b>false </b></td></tr>
+	<tr><td align="right" width="200">isPrime("7")  </td><td align="left">raised Exception</td><td bgcolor="red"><b>true </b></td></tr>
+	<tr><td align="right" width="200">isPrime("13")  </td><td align="left">raised Exception</td><td bgcolor="red"><b>true </b></td></tr>
+	<tr><td align="right" width="200">isPrime("15")  </td><td align="left">raised Exception</td><td bgcolor="red"><b>false </b></td></tr>
+	<tr><td align="right" width="200">isPrime("2048")  </td><td align="left">raised Exception</td><td bgcolor="red"><b>false </b></td></tr>
+	<tr><td align="right" width="200">isPrime("1031")  </td><td align="left">raised Exception</td><td bgcolor="red"><b>true </b></td></tr>
+	</table><br>
+	[deductions=0.78]
+	
 	
 <--
 	[OUTPUT OK]
 
 [SUMMARY] 
-	['Swettercise1: PASSED - EXCELLENT!']
+	['Swettercise1: RAN - ERRORS NEED TO BE FIXED. You can to do better! :)']
 [DONE chapter6]
 [ASSIGNMENT DONE] Swettercise1
-<b>          [SCORE] <font color="green">1.00</font></b>
+<b>          [SCORE] 0.22</b>
 
 </pre></body></html>
