--- a/stureports/think-java/DrKiefer.think-java_results.html
+++ b/stureports/think-java/DrKiefer.think-java_results.html
@@ -68,8 +68,8 @@ Enter number of seconds:
 Im thinking of a number between 1 and 100. Can you guess it?
 	What's your guess? 
 	Your guess is: 13
-	The number I was think of is 23
-	You were off by 10
+	The number I was think of is 60
+	You were off by 47
 	
 <--
 	[OUTPUT OK]
@@ -114,15 +114,18 @@ true
 	true
 	true
 	false
-	Test: Results for Exercise4.isAbecedarian()
-	  [PASSED] Exercise4.isAbecedarian("abcdef") 
-	  [PASSED] Exercise4.isAbecedarian("aaaaaa") 
-	  [PASSED] Exercise4.isAbecedarian("gfedcba") 
-	  [PASSED] Exercise4.isAbecedarian("z") 
-	  [PASSED] Exercise4.isAbecedarian("beknow") 
-	  [PASSED] Exercise4.isAbecedarian("no") 
-	  [PASSED] Exercise4.isAbecedarian("he") 
-	  TEST FINISHED, PASSED: 7/7.
+	
+	<br>Results for Exercise4.isAbecedarian()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise4.isAbecedarian("abcdef")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("aaaaaa")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("gfedcba")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("z")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("beknow")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("no")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("he")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	</table><br>
+	[deductions=0.0]
+	
 	
 <--
 	[OUTPUT OK]
@@ -142,30 +145,29 @@ Doesnt Work
 	works
 	Doesnt Work
 	Doesnt Work
-	Test: Results for Exercise5().isDoubloon()
-	  [PASSED] Exercise5.isDoubloon("abcdef") 
-	  [PASSED] Exercise5.isDoubloon("aa") 
-	  [PASSED] Exercise5.isDoubloon("anna") 
-	  [PASSED] Exercise5.isDoubloon("abcdabcd") 
-	  [   :( ] Exercise5.isDoubloon("aaa"): 
-			EXPECTED: false
-			RECEIVED: true
-	  [PASSED] Exercise5.isDoubloon("intestines") 
-	  [PASSED] Exercise5.isDoubloon("i cook crepes on sundays!") 
-	  [   :( ] Exercise5.isDoubloon("Bannab"): 
-			EXPECTED: true
-			RECEIVED: false
-	  TEST FINISHED, PASSED: 6/8.
+	
+	<br>Results for Exercise5().isDoubloon()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise5.isDoubloon("abcdef")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.isDoubloon("aa")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.isDoubloon("anna")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.isDoubloon("abcdabcd")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.isDoubloon("aaa")  </td><td align="left">true</td><td bgcolor="red"><b>false </b></td></tr>
+	<tr><td align="right" width="200">Exercise5.isDoubloon("intestines")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.isDoubloon("i cook crepes on sundays!")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.isDoubloon("Bannab")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
+	</table><br>
+	[deductions=0.05]
+	
 	
 <--
 	[OUTPUT OK]
 
 [SUMMARY] 
 	['Exercise4: PASSED - EXCELLENT!'
-	 'Exercise5: PASSED - EXCELLENT!']
+	 'Exercise5: PASSED - GOOD JOB BUT SOME EDGE CASE ERRORS WERE FOUND.']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: Ch6
-<b>          [SCORE] <font color="green">1.00</font></b>
+<b>          [SCORE] <font color="green">0.95</font></b>
 
 <hr>
 
