--- a/stureports/think-java/aliyaaware.think-java_results.html
+++ b/stureports/think-java/aliyaaware.think-java_results.html
@@ -64,8 +64,8 @@ How many seconds do you want to convert? 13 seconds = 0 hours, 0 minutes, 13 sec
 -->
 Im thinking of a number between 1-100, can you guess it?
 	Type a number : Your Guess is 13
-	THe number I was thinkin of is: 49
-	You were off by: 36
+	THe number I was thinkin of is: 99
+	You were off by: 86
 	
 <--
 	[OUTPUT OK]
@@ -109,21 +109,18 @@ Im thinking of a number between 1-100, can you guess it?
 	[SUCCESSFUL COMPILE] Ch6Ex4.java
 [RUNNING] Ch6Ex4
 -->
-Test: Results for Exercise4.isAbecedarian()
-	  [PASSED] Exercise4.isAbecedarian("abcdef") 
-	  [   :( ] Exercise4.isAbecedarian("aaaaaa"): 
-			EXPECTED: true
-			RECEIVED: Exception Thrown
-	  [   :( ] Exercise4.isAbecedarian("gfedcba"): 
-			EXPECTED: false
-			RECEIVED: Exception Thrown
-	  [PASSED] Exercise4.isAbecedarian("z") 
-	  [PASSED] Exercise4.isAbecedarian("beknow") 
-	  [PASSED] Exercise4.isAbecedarian("no") 
-	  [   :( ] Exercise4.isAbecedarian("he"): 
-			EXPECTED: false
-			RECEIVED: Exception Thrown
-	  TEST FINISHED, PASSED: 4/7.
+
+	<br>Results for Exercise4.isAbecedarian()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise4.isAbecedarian("abcdef")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("aaaaaa")  </td><td align="left">Exception Thrown</td><td bgcolor="red"><b>true </b></td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("gfedcba")  </td><td align="left">Exception Thrown</td><td bgcolor="red"><b>false </b></td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("z")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("beknow")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("no")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("he")  </td><td align="left">Exception Thrown</td><td bgcolor="red"><b>false </b></td></tr>
+	</table><br>
+	[deductions=0.25]
+	
 	
 <--
 	[OUTPUT OK]
@@ -135,26 +132,29 @@ Test: Results for Exercise4.isAbecedarian()
 	[SUCCESSFUL COMPILE] Ch6Ex5.java
 [RUNNING] Ch6Ex5
 -->
-Test: Results for Exercise5().isDoubloon()
-	  [PASSED] Exercise5.isDoubloon("abcdef") 
-	  [PASSED] Exercise5.isDoubloon("aa") 
-	  [PASSED] Exercise5.isDoubloon("anna") 
-	  [PASSED] Exercise5.isDoubloon("abcdabcd") 
-	  [PASSED] Exercise5.isDoubloon("aaa") 
-	  [PASSED] Exercise5.isDoubloon("intestines") 
-	  [PASSED] Exercise5.isDoubloon("i cook crepes on sundays!") 
-	  [PASSED] Exercise5.isDoubloon("Bannab") 
-	  TEST FINISHED, PASSED: 8/8.
+
+	<br>Results for Exercise5().isDoubloon()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise5.isDoubloon("abcdef")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.isDoubloon("aa")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.isDoubloon("anna")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.isDoubloon("abcdabcd")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.isDoubloon("aaa")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.isDoubloon("intestines")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.isDoubloon("i cook crepes on sundays!")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.isDoubloon("Bannab")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	</table><br>
+	[deductions=0.0]
+	
 	
 <--
 	[OUTPUT OK]
 
 [SUMMARY] 
-	['Exercise4: PASSED - EXCELLENT!'
+	['Exercise4: PASSED - BUT TEST CASES FOUND SOME ERRORS'
 	 'Exercise5: PASSED - EXCELLENT!']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: Ch6
-<b>          [SCORE] <font color="green">1.00</font></b>
+<b>          [SCORE] 0.75</b>
 
 <hr>
 
@@ -198,56 +198,39 @@ Test: Results for Exercise5().isDoubloon()
 	4
 	2
 	1
-	Test: Results for reverseStr()
-	  [   :( ] reverseStr("I haz win?"): 
-			EXPECTED: ?niw zah I
-			RECEIVED: raised exception
-	  [   :( ] reverseStr("007 bond james"): 
-			EXPECTED: semaj dnob 700
-			RECEIVED: raised exception
-	  [   :( ] reverseStr("banannas"): 
-			EXPECTED: sannanab
-			RECEIVED: raised exception
-	  [   :( ] reverseStr("tacocat"): 
-			EXPECTED: tacocat
-			RECEIVED: raised exception
-	  TEST FINISHED, PASSED: 0/4.
-	Test: Results for collatzThis()
-	  [   :( ] collatzThis("12"): 
-			EXPECTED: 12, 6, 3, 10, 5, 16, 8, 4, 2, 1
-			RECEIVED: Raised Exception
-	  [   :( ] collatzThis("4"): 
-			EXPECTED: 4, 2, 1
-			RECEIVED: Raised Exception
-	  [   :( ] collatzThis("11"): 
-			EXPECTED: 11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1
-			RECEIVED: Raised Exception
-	  TEST FINISHED, PASSED: 0/7.
-	Test: Results for isPrime()
-	  [   :( ] isPrime("12"): 
-			EXPECTED: false
-			RECEIVED: true
-	  [   :( ] isPrime("4"): 
-			EXPECTED: false
-			RECEIVED: true
-	  [PASSED] isPrime("7") 
-	  [PASSED] isPrime("13") 
-	  [   :( ] isPrime("15"): 
-			EXPECTED: false
-			RECEIVED: true
-	  [   :( ] isPrime("2048"): 
-			EXPECTED: false
-			RECEIVED: true
-	  [PASSED] isPrime("1031") 
-	  TEST FINISHED, PASSED: 3/14.
+	
+	<br>Results for reverseStr()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">reverseStr("I haz win?")  </td><td align="left">raised exception</td><td bgcolor="red"><b>?niw zah I </b></td></tr>
+	<tr><td align="right" width="200">reverseStr("007 bond james")  </td><td align="left">raised exception</td><td bgcolor="red"><b>semaj dnob 700 </b></td></tr>
+	<tr><td align="right" width="200">reverseStr("banannas")  </td><td align="left">raised exception</td><td bgcolor="red"><b>sannanab </b></td></tr>
+	<tr><td align="right" width="200">reverseStr("tacocat")  </td><td align="left">raised exception</td><td bgcolor="red"><b>tacocat </b></td></tr>
+	</table><br>
+	
+	<br>Results for collatzThis()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">collatzThis("12")  </td><td align="left">Raised Exception</td><td bgcolor="red"><b>12, 6, 3, 10, 5, 16, 8, 4, 2, 1 </b></td></tr>
+	<tr><td align="right" width="200">collatzThis("4")  </td><td align="left">Raised Exception</td><td bgcolor="red"><b>4, 2, 1 </b></td></tr>
+	<tr><td align="right" width="200">collatzThis("11")  </td><td align="left">Raised Exception</td><td bgcolor="red"><b>11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1 </b></td></tr>
+	</table><br>
+	
+	<br>Results for isPrime()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">isPrime("12")  </td><td align="left">true</td><td bgcolor="red"><b>false </b></td></tr>
+	<tr><td align="right" width="200">isPrime("4")  </td><td align="left">true</td><td bgcolor="red"><b>false </b></td></tr>
+	<tr><td align="right" width="200">isPrime("7")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">isPrime("13")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">isPrime("15")  </td><td align="left">true</td><td bgcolor="red"><b>false </b></td></tr>
+	<tr><td align="right" width="200">isPrime("2048")  </td><td align="left">true</td><td bgcolor="red"><b>false </b></td></tr>
+	<tr><td align="right" width="200">isPrime("1031")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	</table><br>
+	[deductions=0.36]
+	
 	
 <--
 	[OUTPUT OK]
 
 [SUMMARY] 
-	['Swettercise1: PASSED - EXCELLENT!']
+	['Swettercise1: RAN - ERRORS NEED TO BE FIXED. You can to do better! :)']
 [DONE chapter6]
 [ASSIGNMENT DONE] Swettercise1
-<b>          [SCORE] <font color="green">1.00</font></b>
+<b>          [SCORE] 0.64</b>
 
 </pre></body></html>
