--- a/stureports/think-java/coleschomer.think-java_results.html
+++ b/stureports/think-java/coleschomer.think-java_results.html
@@ -121,56 +121,39 @@ American Format:
 	c
 	a
 	t
-	Test: Results for reverseStr()
-	  [   :( ] reverseStr("I haz win?"): 
-			EXPECTED: ?niw zah I
-			RECEIVED: raised exception
-	  [   :( ] reverseStr("007 bond james"): 
-			EXPECTED: semaj dnob 700
-			RECEIVED: raised exception
-	  [   :( ] reverseStr("banannas"): 
-			EXPECTED: sannanab
-			RECEIVED: raised exception
-	  [   :( ] reverseStr("tacocat"): 
-			EXPECTED: tacocat
-			RECEIVED: raised exception
-	  TEST FINISHED, PASSED: 0/4.
-	Test: Results for collatzThis()
-	  [   :( ] collatzThis("12"): 
-			EXPECTED: 12, 6, 3, 10, 5, 16, 8, 4, 2, 1
-			RECEIVED: Raised Exception
-	  [   :( ] collatzThis("4"): 
-			EXPECTED: 4, 2, 1
-			RECEIVED: Raised Exception
-	  [   :( ] collatzThis("11"): 
-			EXPECTED: 11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1
-			RECEIVED: Raised Exception
-	  TEST FINISHED, PASSED: 0/7.
-	Test: Results for isPrime()
-	  [   :( ] isPrime("12"): 
-			EXPECTED: false
-			RECEIVED: true
-	  [   :( ] isPrime("4"): 
-			EXPECTED: false
-			RECEIVED: true
-	  [PASSED] isPrime("7") 
-	  [PASSED] isPrime("13") 
-	  [   :( ] isPrime("15"): 
-			EXPECTED: false
-			RECEIVED: true
-	  [   :( ] isPrime("2048"): 
-			EXPECTED: false
-			RECEIVED: true
-	  [PASSED] isPrime("1031") 
-	  TEST FINISHED, PASSED: 3/14.
+	
+	<br>Results for reverseStr()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">reverseStr("I haz win?")  </td><td align="left">raised exception</td><td bgcolor="red"><b>?niw zah I </b></td></tr>
+	<tr><td align="right" width="200">reverseStr("007 bond james")  </td><td align="left">raised exception</td><td bgcolor="red"><b>semaj dnob 700 </b></td></tr>
+	<tr><td align="right" width="200">reverseStr("banannas")  </td><td align="left">raised exception</td><td bgcolor="red"><b>sannanab </b></td></tr>
+	<tr><td align="right" width="200">reverseStr("tacocat")  </td><td align="left">raised exception</td><td bgcolor="red"><b>tacocat </b></td></tr>
+	</table><br>
+	
+	<br>Results for collatzThis()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">collatzThis("12")  </td><td align="left">Raised Exception</td><td bgcolor="red"><b>12, 6, 3, 10, 5, 16, 8, 4, 2, 1 </b></td></tr>
+	<tr><td align="right" width="200">collatzThis("4")  </td><td align="left">Raised Exception</td><td bgcolor="red"><b>4, 2, 1 </b></td></tr>
+	<tr><td align="right" width="200">collatzThis("11")  </td><td align="left">Raised Exception</td><td bgcolor="red"><b>11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1 </b></td></tr>
+	</table><br>
+	
+	<br>Results for isPrime()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">isPrime("12")  </td><td align="left">true</td><td bgcolor="red"><b>false </b></td></tr>
+	<tr><td align="right" width="200">isPrime("4")  </td><td align="left">true</td><td bgcolor="red"><b>false </b></td></tr>
+	<tr><td align="right" width="200">isPrime("7")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">isPrime("13")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">isPrime("15")  </td><td align="left">true</td><td bgcolor="red"><b>false </b></td></tr>
+	<tr><td align="right" width="200">isPrime("2048")  </td><td align="left">true</td><td bgcolor="red"><b>false </b></td></tr>
+	<tr><td align="right" width="200">isPrime("1031")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	</table><br>
+	[deductions=0.36]
+	
 	
 <--
 	[OUTPUT OK]
 
 [SUMMARY] 
-	['Swettercise1: PASSED - EXCELLENT!']
+	['Swettercise1: RAN - ERRORS NEED TO BE FIXED. You can to do better! :)']
 [DONE chapter6]
 [ASSIGNMENT DONE] Swettercise1
-<b>          [SCORE] <font color="green">1.00</font></b>
+<b>          [SCORE] 0.64</b>
 
 </pre></body></html>
